// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SWITCH ## NATIVE ## 01 isOpened: color: 'red', isClosed: color: 'blue' 1`] = `
Array [
  Array [
    "IF $switch: isOpened",
    "color: red /*./$switch.isOpened*/",
  ],
  Array [
    "IF $switch: isClosed",
    "color: blue /*./$switch.isClosed*/",
  ],
]
`;

exports[`SWITCH ## NATIVE ## 02 :hover => isOpened => :active => color: 'red' 1`] = `null`;

exports[`SWITCH ## NATIVE ## 03 atomizeRuleset(isOpened => atomizeRuleset(color: 'red), isClosed => atomizeRuleset(color: 'green')) 1`] = `
Array [
  Array [
    "IF $switch: isOpened",
    "color: red /*.*/",
  ],
  Array [
    "IF $switch: isClosed",
    "color: green /*.*/",
  ],
]
`;

exports[`SWITCH ## NATIVE ## 04 variant's order: black-red-green-yellow-blue-brown 1`] = `
Array [
  Array [
    "color: black /*.*/",
  ],
  Array [
    "IF $switch: isOpened",
    "color: red /*./$switch.isOpened*/",
  ],
  Array [
    "IF $switch: isOpened",
    "IF $switch: isClosed",
    "color: green /*./$switch.isOpened/$switch.isClosed*/",
  ],
]
`;

exports[`SWITCH ## NATIVE ## 05 variant's order with array: $web => brown-blue-yellow-red-black 1`] = `
Array [
  Array [
    "IF $switch: isOpened",
    "color: red /*.[1]/$switch.isOpened[1]*/",
  ],
  Array [
    "color: black /*.[2]*/",
  ],
]
`;

exports[`SWITCH ## NATIVE ## 06 nesting PSEUDO and $switch 1`] = `null`;

exports[`SWITCH ## WEB ## 01 isOpened: color: 'red', isClosed: color: 'blue' 1`] = `
Array [
  Array [
    "IF $switch: isOpened",
    ".a { color:red /*./$switch.isOpened*/ }",
  ],
  Array [
    "IF $switch: isClosed",
    ".b { color:blue /*./$switch.isClosed*/ }",
  ],
]
`;

exports[`SWITCH ## WEB ## 02 :hover => isOpened => :active => color: 'red' 1`] = `
Array [
  Array [
    "IF $switch: isOpened",
    ".a:hover:active { color:red /*./$web/:hover/$switch.isOpened/$web*/ }",
  ],
]
`;

exports[`SWITCH ## WEB ## 03 atomizeRuleset(isOpened => atomizeRuleset(color: 'red), isClosed => atomizeRuleset(color: 'green')) 1`] = `
Array [
  Array [
    "IF $switch: isOpened",
    ".a { color:red /*.*/ }",
  ],
  Array [
    "IF $switch: isClosed",
    ".b { color:green /*.*/ }",
  ],
]
`;

exports[`SWITCH ## WEB ## 04 variant's order: black-red-green-yellow-blue-brown 1`] = `
Array [
  Array [
    ".d { color:black /*.*/ }",
  ],
  Array [
    "IF $switch: isOpened",
    ".b { color:red /*./$switch.isOpened*/ }",
  ],
  Array [
    "IF $switch: isOpened",
    "IF $switch: isClosed",
    ".a { color:green /*./$switch.isOpened/$switch.isClosed*/ }",
  ],
  Array [
    "IF $switch: isOpened",
    ".c { color:yellow /*./$switch.isOpened/$web*/ }",
  ],
  Array [
    ".f { color:blue /*./$web*/ }",
  ],
  Array [
    "IF $switch: isOpened",
    ".e { color:brown /*./$web/$switch.isOpened*/ }",
  ],
]
`;

exports[`SWITCH ## WEB ## 05 variant's order with array: $web => brown-blue-yellow-red-black 1`] = `
Array [
  Array [
    "IF $switch: isOpened",
    ".a { color:brown /*.[0]/$web[0]/$switch.isOpened*/ }",
  ],
  Array [
    ".b { color:blue /*.[0]/$web[1]*/ }",
  ],
  Array [
    "IF $switch: isOpened",
    ".c { color:yellow /*.[1]/$switch.isOpened[0]/$web*/ }",
  ],
  Array [
    "IF $switch: isOpened",
    ".d { color:red /*.[1]/$switch.isOpened[1]*/ }",
  ],
  Array [
    ".e { color:black /*.[2]*/ }",
  ],
]
`;

exports[`SWITCH ## WEB ## 06 nesting PSEUDO and $switch 1`] = `
Array [
  Array [
    "IF $switch: isOpened",
    ".a:hover:active { margin:10px /*./$web/:hover/$switch.isOpened/$web*/ }",
  ],
]
`;
